--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div id="content-c321835" class="csc-default">
 		       <p><strong>Adding promos to account</strong></p>
-		       <ul style="margin-left:20px">
+		       <ul style="margin-left:20px; font-size:16px">
 			  <li>Tap your profile icon</li>
 			  <li>Select <strong>Promos and Credits</strong></li>
 			  <li>Enter code at the top of the page</li>
@@ -139,7 +139,7 @@
                     </div>
                     <div id="content-c321838" class="csc-default">
                       <p><strong>Adding promos at checkout</strong></p>
-		       <ul style="margin-left:20px">
+		       <ul style="margin-left:20px; font-size:16px">
 			  <li>Add items to your cart</li>
 			  <li>Select <strong>View Cart</strong></li>
 			  <li>Enter promo where it says <strong>Enter promo code</strong></li>
