--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-01.jpg" data-in-lg-src="images/enter-code-snip-01.jpg" data-in-sm-src="images/enter-code-snip-01.jpg" data-in-md-src="images/enter-code-snip-01.jpg" data-in-xs-src="images/enter-code-snip-01.jpg" data-in-xxs-src="images/enter-code-snip-01.jpg" data-in-xl-src="images/enter-code-snip-01.jpg" class="rimg" alt="Select Promos from the app menu" title="Select Promos from the app menu"> </div>
                     </div>
                     <div id="content-c321835" class="csc-default">
-		       <p><strong>Adding promos to account</strong></p>
+		       <p style="margin-bottom:10px"><strong>Adding promos to account</strong></p>
 		       <ul style="margin-left:20px; font-size:16px">
 			  <li>Tap your profile icon</li>
 			  <li>Select <strong>Promos and Credits</strong></li>
@@ -138,7 +138,7 @@
                       <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-lyftdojo.jpg" data-in-lg-src="images/enter-code-snip-lyftdojo.jpg" data-in-sm-src="images/enter-code-snip-lyftdojo.jpg" data-in-md-src="images/enter-code-snip-lyftdojo.jpg" data-in-xs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xxs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xl-src="images/enter-code-snip-lyftdojo.jpg" class="rimg" alt="Enter promo code LYFTDOJO" title="Enter promo code LYFTDOJO"> </div>
                     </div>
                     <div id="content-c321838" class="csc-default">
-                      <p><strong>Adding promos at checkout</strong></p>
+                      <p style="margin-bottom:10px"><strong>Adding promos at checkout</strong></p>
 		       <ul style="margin-left:20px; font-size:16px">
 			  <li>Add items to your cart</li>
 			  <li>Select <strong>View Cart</strong></li>
