--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="row flex skin-mb-s">
                   <div class="col col-sm-4 col-sm-offset-2">
                     <div id="content-c321834" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-01.jpg" data-in-lg-src="images/enter-code-snip-01.jpg" data-in-sm-src="images/enter-code-snip-01.jpg" data-in-md-src="images/enter-code-snip-01.jpg" data-in-xs-src="images/enter-code-snip-01.jpg" data-in-xxs-src="images/enter-code-snip-01.jpg" data-in-xl-src="images/enter-code-snip-01.jpg" class="rimg" alt="Select Promos from the app menu" title="Select Promos from the app menu"> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-01.jpg" data-in-lg-src="images/promo-account-screen.jpg" data-in-sm-src="images/promo-account-screen.jpg" data-in-md-src="images/promo-account-screen.jpg" data-in-xs-src="images/promo-account-screen.jpg" data-in-xxs-src="images/promo-account-screen.jpg" data-in-xl-src="images/promo-account-screen.jpg" class="rimg" alt="Adding promos to account" title="Adding promos to account"> </div>
                     </div>
                     <div id="content-c321835" class="csc-default">
 		       <p style="margin-bottom:10px"><strong>Adding promos to account</strong></p>
