--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   </div>
                   <div class="col col-sm-4">
                     <div id="content-c321833" class="csc-default">
-                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/enter-code-snip-lyftdojo.jpg" data-in-lg-src="images/enter-code-snip-lyftdojo.jpg" data-in-sm-src="images/enter-code-snip-lyftdojo.jpg" data-in-md-src="images/enter-code-snip-lyftdojo.jpg" data-in-xs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xxs-src="images/enter-code-snip-lyftdojo.jpg" data-in-xl-src="images/enter-code-snip-lyftdojo.jpg" class="rimg" alt="Enter promo code LYFTDOJO" title="Enter promo code LYFTDOJO"> </div>
+                      <div class="csc-textpic csc-textpic-center csc-textpic-above"><img src="images/promo-checkout-screen.jpg" data-in-lg-src="images/promo-checkout-screen.jpg" data-in-sm-src="images/promo-checkout-screen.jpg" data-in-md-src="images/promo-checkout-screen.jpg" data-in-xs-src="images/promo-checkout-screen.jpg" data-in-xxs-src="images/promo-checkout-screen.jpg" data-in-xl-src="images/promo-checkout-screen.jpg" class="rimg" alt="Adding promos at checkout" title="Adding promos at checkout"> </div>
                     </div>
                     <div id="content-c321838" class="csc-default">
                       <p style="margin-bottom:10px"><strong>Adding promos at checkout</strong></p>
